demystify-lib/src/problem/snapshots/demystify_lib__problem__parse__tests__pretty_print.snap
---
source: demystify-lib/src/problem/parse.rs
expression: k
---
{
    "mInfo",
    "mLanguage",
    "mStatements",
}
